fix grid layout gap with masonry. Notable fact: use of masonry function in items-index, with columnWidth set at selector, selector display has to be block. Try animation next may be?

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -168,3 +168,12 @@
     margin-top: 21px;
     letter-spacing: 5px;
 }
+
+/*general*/
+.list-items {
+    overflow: auto;
+}
+
+.item-thumbnail {
+    display: block;
+}
